syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.sustain.census";
option java_outer_classname = "SustainCensus";
//option objc_class_prefix = "";

package census;

service Census {
  rpc GetData (CensusRequest) returns (CensusResponse) {}
}

message CensusRequest {
  string resolutionKey = 1; // Example:- 'state', 'county', 'tract'
  double latitude = 2;
  double longitude = 3;
  string feature = 4; // Example: 'total_population', 'median_household_income'
  // TODO: get a list of features in the request
}

message CensusResponse {
  double response = 1; // a single integer value for now
  // TODO: return a CensusResults object
}

